<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="io.pivotal.beach.osusume.android.OsusumeActivity">

    <item
        android:id="@+id/createRestaurant"
        android:icon="@android:drawable/ic_input_add"
        app:showAsAction="ifRoom"
        android:title="Create!" />

</menu>